# nodes_hub

./: Cargo.toml  README.md  Readme.md  mock_parameters.json  peppy.json5
openarm01_arm/: peppy.json5
openarm01_arm/variants/default/: Readme.md  peppy.json5
openarm01_arm/variants/mock_python/: peppy.json5  pyproject.toml
openarm01_arm/variants/mock_python/src/openarm01_arm/: __main__.py
openarm01_arm/variants/mock_rust/: Cargo.toml  peppy.json5
openarm01_arm/variants/mock_rust/src/: main.rs
openarm01_controller/: peppy.json5
openarm01_controller/variants/default/: Cargo.toml  peppy.json5
openarm01_controller/variants/mock_python/: peppy.json5  pyproject.toml
openarm01_controller/variants/mock_python/src/fake_openarm01_controller/: __main__.py
openarm01_controller/variants/mock_rust/: Cargo.toml  peppy.json5
openarm01_controller/variants/mock_rust/src/: main.rs
robot_brain_etcher1/: peppy.json5
robot_brain_etcher1/variants/default/: Cargo.toml  peppy.json5
robot_brain_etcher1/variants/mock_python/: peppy.json5  pyproject.toml
robot_brain_etcher1/variants/mock_python/src/fake_robot_brain/: __main__.py
robot_brain_etcher1/variants/mock_python/src/robot_brain_etcher1/: __main__.py
robot_brain_etcher1/variants/mock_rust/: Cargo.toml  peppy.json5
robot_brain_etcher1/variants/mock_rust/src/: main.rs
src/: camera.rs  conversion.rs  encoding.rs  lib.rs  main.rs  pipeline.rs  services.rs
src/camera/: capture.rs  controls.rs  device.rs  mod.rs  nokhwa_impl.rs
src/config/: mod.rs
src/pipeline/: converter.rs  mod.rs  processor.rs
src/types/: encoding.rs  error.rs  frame.rs  mod.rs  parameters.rs
tests/: INTEGRATION_TESTS.md  camera_tests.rs  conversion_tests.rs  encoding_tests.rs  integration_tests.rs  setup_v4l2loopback.sh
tests/helpers/: virtual_camera.rs
uvc_camera/: Cargo.toml  README.md  apptainer.def  peppy.json5
uvc_camera/src/: main.rs  services.rs
uvc_camera/src/camera/: nokhwa_impl.rs
uvc_camera/src/types/: frame.rs
uvc_camera/variants/fake/: peppy.json5
uvc_camera/variants/linux/: apptainer.def  peppy.json5
uvc_camera/variants/linux/src/camera/: device.rs  nokhwa_impl.rs
uvc_camera/variants/linux/tests/helpers/: mod.rs
uvc_camera/variants/macos/: peppy.json5
uvc_camera/variants/mock_python/: .gitignore  Readme.md  apptainer.def  peppy.json5  pyproject.toml
uvc_camera/variants/mock_python/src/fake_uvc_camera/: __main__.py  mock_parameters.json
uvc_camera/variants/mock_rust/: Cargo.toml  Readme.md  apptainer.def  peppy.json5
uvc_camera/variants/mock_rust/src/: main.rs
uvc_camera_controls_tests/: Cargo.toml  apptainer.def  peppy.json5
uvc_camera_controls_tests/src/: main.rs
uvc_camera_video_reconstruction/: apptainer.def  peppy.json5  pyproject.toml
uvc_camera_video_reconstruction/src/uvc_camera_video_reconstruction/: __main__.py
uvc_camera_video_reconstruction/variants/rust/: Cargo.toml  apptainer.def  peppy.json5
uvc_camera_video_reconstruction/variants/rust/src/: main.rs
