[package]
name = "uvc_camera"
version = "0.1.0"
edition = "2024"

[dependencies]
peppygen = { path = ".peppy/libs/peppygen" }
peppylib = { path = ".peppy/libs/peppylib" }
bytes = "1"
tokio = { version = "1.47", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
serde = "1.0"
serde_json = "1.0"
nokhwa = { version = "0.10.10", features = ["input-native"] }
image = "0.25"
anyhow = "1.0"
v4l2-sys-mit = "0.3.0"
libc = "0.2"
