[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uvc_camera_video_reconstruction"
version = "0.1.0"
description = "uvc_camera_video_reconstruction peppy node"
requires-python = ">=3.11,<3.14"
dependencies = ["peppygen", "av", "numpy"]

[project.scripts]
uvc_camera_video_reconstruction = "uvc_camera_video_reconstruction.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uvc_camera_video_reconstruction"]

[dependency-groups]
dev = []

[tool.uv.sources]
peppygen = { path = ".peppy/libs/peppygen" }
