[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fake_openarm01_arm"
version = "0.1.0"
description = "fake_openarm01_arm peppy node"
requires-python = ">=3.13,<3.14"
dependencies = ["peppygen"]

[project.scripts]
fake_openarm01_arm = "fake_openarm01_arm.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fake_openarm01_arm"]

[dependency-groups]
dev = []

[tool.uv.sources]
peppygen = { path = ".peppy/libs/peppygen" }
