[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fake_openarm01_controller"
version = "0.1.0"
description = "fake_openarm01_controller peppy node"
requires-python = ">=3.11,<3.14"
dependencies = ["peppygen"]

[project.scripts]
fake_openarm01_controller = "fake_openarm01_controller.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fake_openarm01_controller"]

[dependency-groups]
dev = []

[tool.uv.sources]
peppygen = { path = ".peppy/libs/peppygen" }