[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot_brain_etcher1"
version = "0.1.0"
description = "robot_brain_etcher1 peppy node"
requires-python = ">=3.11,<3.14"
dependencies = ["peppygen"]

[project.scripts]
robot_brain_etcher1 = "robot_brain_etcher1.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/robot_brain_etcher1"]

[dependency-groups]
dev = []

[tool.uv.sources]
peppygen = { path = ".peppy/libs/peppygen" }