[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fake_uvc_camera"
version = "0.1.0"
description = "fake_uvc_camera peppy node"
requires-python = ">=3.11,<3.14"
dependencies = ["peppygen", "av"]

[project.scripts]
fake_uvc_camera = "fake_uvc_camera.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fake_uvc_camera"]

[dependency-groups]
dev = []

[tool.uv.sources]
peppygen = { path = ".peppy/libs/peppygen" }